--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,8 @@ body {
   color: var(--text-primary);
   line-height: 1.6;
   padding: 20px;
+  overflow-x: hidden;
+
 }
 
 /* Navbar container */
@@ -35,6 +37,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .navbar-brand {
@@ -42,6 +46,25 @@ body {
   font-weight: bold;
   color: var(--text-primary, #333);
 }
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  text-decoration: none;
+  color: var(--text-primary);
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.navbar-logo {
+  height: 30px;
+  width: auto;
+  display: block;
+  border-radius: 100px;
+  max-width: 100%;       /* prevent overflow */
+}
+
 
 /* Hamburger menu toggle */
 .menu-toggle {
@@ -309,7 +332,7 @@ mark {
   margin: 0 auto 30px auto;
   max-width: 800px;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: var(--text-primary);
   line-height: 1.8;
 }
@@ -468,6 +491,11 @@ mark {
 
 
 @media screen and (max-width: 600px) {
+
+  .navbar-logo {
+    height: 24px;
+  }
+
   .music-card iframe {
     height: 500px !important; /* taller embeds for easier scrolling */
   }
@@ -525,6 +553,14 @@ mark {
     cursor: pointer;
     color: var(--text-primary);
   }
+
+  .navbar-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
 
   .nav-links {
     display: none;
